# fundamentalclub

./: .gitignore  README.md  chat_utils.py  database_utils.py  main.py  pyproject.toml  requirements.txt  setup_pinecone.ipynb
src/: main.py
src/fundamental-guide/: guide.py
src/fundamentalclub/: main.py
src/fundamentalclub/chatutils/: chat_utils.py
src/fundamentalclub/cosmos_backend/: cosmos_backend.py
src/fundamentalclub/cosmosbackend/: cosmosbackend.py
src/fundamentalclub/fundamentalguide/: guide.py  queries.json
tests/fundamentalguide/: test_strip_markdown.py
